# myrobot

BOARD/MAIN32/: README.md  platformio.ini
BOARD/MAIN32/include/: controll_config.h  hardwareconfig.h
BOARD/MAIN32/src/: CAN.c  CAN_manager.cpp  MAIN_controller.cpp  main.cpp
BOARD/RTC_HC_fake/: README.txt
BOARD/RTC_HC_fake/include/: controll_config.h  hardwareconfig.h
BOARD/RTC_HC_fake/src/: CAN_manager.cpp  Main_controller.cpp  main.cpp
app_ros/: CMakeLists.txt  package.xml
app_ros/config/: param_app.yaml
app_ros/interface/: app.ui
app_ros/launch/: app_backend.launch  app_frontend.launch
app_ros/script/: app_backend.py  app_frontend.py
apriltag_ros/apriltag_ros/launch/: continuous_detection.launch
base_controller/: platformio.ini
base_controller/src/: main.cpp
launch_djk_pkg/: CMakeLists.txt  README.txt  map2d.yaml.pgm  map2d.yaml.yaml  package.xml
launch_djk_pkg/config/: parameter_all.yaml  parameter_scan.yaml  parameter_try.yaml
launch_djk_pkg/launch/: map2d.yaml
launch_djk_pkg/map/: map2d.pgm  map2d.yaml
launch_djk_pkg/scripts/: checkPhysical.py  firstWork.py  kickoff.py  launch_apriltag.py  launch_mapping.py  readName_publisher.py  reconnectMajority.py  run_frameWork.py  scanMap_launch.py  try_launch.py
launch_pkg/: CMakeLists.txt  package.xml
launch_pkg/config/: param_all.yaml  param_launch.yaml
launch_pkg/scripts/: check_board_connect.py  firstWork.py  launchAll.py  reconnectBase.py  reconnect_try.py  try_launch.py
mecanum_pkg/: CMakeLists.txt  error.txt  package.xml
mecanum_pkg/launch/: connectCAN.launch  controlDriver.launch  kinematic_mecanum.launch
mecanum_pkg/scripts/: driverELD.py  driver_ELD2.py  driver_ELD3.py  kinematic_mecanum.py  navigation.py  navigation_parking.py
mecanum_pkg/test/: try.py
message_pkg/: CMakeLists.txt  package.xml
message_pkg/msg/: App_request.msg  Reconnect_sts.msg  Status_launch.msg  Status_port.msg  Vel_msg.msg
odom_pkg/: CMakeLists.txt  package.xml
odom_pkg/launch/: odom_encoder.launch  pose_lidar.launch
odom_pkg/scripts/: encoder_odometry.py
odom_pkg/src/: odom_lidar.cpp
robot_pose_publisher/: CMakeLists.txt
robot_pose_publisher/launch/: robot_pose.launch
robot_pose_publisher/src/: robot_pose_publisher.cpp
robot_setup_tf_tutorial/: CMakeLists.txt  odom_v5.cpp
robot_setup_tf_tutorial/launch/: conver_lidar.launch  convert.launch  odom_encoder.launch
robot_setup_tf_tutorial/src/: checkError_t265.cpp  convert_imuBno055.cpp  convert_imuD435.cpp  convert_imuT265.cpp  odom_encoder.cpp  odom_lidar.cpp  odom_v7.cpp
robot_setup_tf_tutorial/src_store/: data_robot.cpp  odom_aruco.cpp  odom_v4.cpp  odom_v4_mp.cpp  odom_v5.cpp  odom_v5.cpp.bk  odom_v6.cpp  odom_v6_ps2.cpp  odom_v8.cpp  odom_v9.cpp  tf2_tranform.cpp  tf_broadcaster.cpp  tf_ex_v2.cpp  tf_example.cpp  tf_listener.cpp  tf_listener_bk.cpp  tf_odometry_ex.cpp  tf_v3.cpp  tf_v4.cpp  tf_v41.cpp  tf_v5.cpp  tranform_pose.py
ros_canbus/: CMakeLists.txt  package.xml
ros_canbus/config/: myrobot_rviz.rviz
ros_canbus/launch/: convertCAN_ROS.launch  get_map.launch  testCircuit.launch
ros_canbus/scripts/: convert_ROS_CAN.py
rplidar_ros/src/: node.cpp
sti_module/: CMakeLists.txt  package.xml
sti_module/config/: param_getPoseRobot.yaml  param_goalControl.yaml  param_parking.yaml  param_zoneLidar.yaml
sti_module/data/: data_log.txt  data_tag.txt
sti_module/launch/: clearERR.launch  getPoseTag.launch  goalControl.launch  log_parking.launch  modbusControl.launch  module_all.launch  parkingControl.launch  poseRobotTag.launch  ps2.launch  safety_zone.launch  test.launch  test_node.launch  vector.launch
sti_module/src/: cancelGoal.py  checkMC.py  cmdVelSwitch.py  detect_tag.py  getPoseAruco_v2.cpp  getPoseRobot_v4.cpp  getPoseRobot_v5.cpp  getPoseRobot_v6.cpp  ghi_LOG.cpp  goal_control_v5.py  goal_control_v6.py  goal_control_v7.py  key_pub.cpp  modbus_control_v2.py  parking_lintu_v10.py  parking_lintu_v11.py  parking_lintu_v6.py  parking_lintu_v7.py  parking_lintu_v8.py  parking_lintu_v9.py  parking_v15.py  ps2.py  quangduong.py  quytrinh_v2.py  safety_zone_v5.py  switch_cmdVel.py  test_POWER.py  test_goal_control.py  zone.cpp
sti_module/store/: aruco_plan.py  clearERR_mc.py  convert_qua_eu.py  file_test.cpp  getPoseAruco.cpp  getPoseRobot.cpp  getPoseRobot_test.cpp  getPoseRobot_v2.cpp  getPoseRobot_v3.cpp  goal_control.py  goal_control_v2.py  goal_control_v3.py  goal_control_v4.py  manageLaunch_bringup_v1.py  manage_launch.py  mission.py  modbus_control.py  msg.yaml  one_thread_example.py  parking.py  parking_3cam_v1.py  parking_lidar.py  parking_lidar_v1.py  parking_lidar_v2.py  parking_linetu_v5.py  parking_lintu.py  parking_lintu_v1.py  parking_lintu_v2.py  parking_lintu_v3.py  parking_lintu_v4.py  parking_lintu_v5.py  parking_v10.py  parking_v11.py  parking_v12.py  parking_v13.py  parking_v14.py  parking_v2.py  parking_v3.py  parking_v4.py  parking_v5.py  (+28 more)
sti_module/test/: add_two_ints_client.py  add_two_ints_server.py  singnal_level_wifi.py
sti_msgs/: CMakeLists.txt  package.xml
sti_msgs/msg/: Client_request.msg  Client_respond.msg  EMC.msg  FL_cmdRequest.msg  Goal_control.msg  HC_info.msg  HC_request.msg  HMI_allButton.msg  HMI_buttonPassword.msg  HMI_infoGeneral.msg  HMI_papeAuto.msg  HMI_papeByHand.msg  HMI_papeDetailFL.msg  HMI_papeDetailNN.msg  HMI_papeLaunch.msg  HMI_papeMessage.msg  HMI_papePassword.msg  Lift_control.msg  Lift_status.msg  MC_status.msg  Magnetic_line.msg  Main_missionControl.msg  Main_switchMode.msg  ManageLaunch.msg  Mission_control.msg  Mission_status.msg  Modbus_0x.msg  Modbus_4x_read.msg  Modbus_4x_write.msg  Motor_parameter.msg  Motor_rpm.msg  Move_request.msg  Move_respond.msg  NN_cmdRequest.msg  NN_infoRequest.msg  NN_infoRespond.msg  POWER_info.msg  POWER_request.msg  Parking_control.msg  Parking_status.msg  (+13 more)
test/: convert_py_terminalCommand.py  get_attribute.py  labels_in_scrollarea.py  led_lb_scrollare.py  set_attr.py
troubleshooting/: error.txt
up_start/: TestCircuit.sh
vaccumCleaner/: platformio.ini
vaccumCleaner/include/: main.h
vaccumCleaner/src/: main.cpp
(+150 files in other folders)
